* What will be new in gsl-1.10:

** Improved the convergence test in the Lambert functions to take
account of finite precision and avoid possible failure to converge.

** The configure script no longer redefines finite() to isfinite() as
a workaround for missing finite(), as this caused problems on Solaris.
If finite() is not present gsl_finite() will be used instead.

** Added support in gsl_ieee_set_mode for controlling SSE exceptions
and rounding through the MXCSR control word on x86 processors.

** Improved the accuracy of the generalised laguerre polynomials for
large n when alpha=0.

** The functions gsl_{isnan,isinf,finite} will now always use the
system versions of isnan, isinf and finite if they are available.
Previously the portable GSL implementations were used whenever the
platform supported IEEE comparisons.  The portable gsl_isinf function
now returns -1 instead of +1 for -Inf, in line with recent versions of
the GNU C Library.

** Added function gsl_stats_correlation to compute Pearson correlation
   of two datasets

** Added support for generalized eigensystems

* What is new in gsl-1.9:

** Fixed the elliptic integrals F,E,P,D so that they have the correct
behavior for phi > pi/2 and phi < 0.  The angular argument is now
valid for all phi.  Also added the complete elliptic integral
gsl_sf_ellint_Pcomp.

** Added a new BFGS minimisation method gsl_multimin_fdfminimizer_vector_bfgs2
based on the algorithm given by R.Fletcher in "Practical Methods of
Optimisation" (Second edition).  This requires substantially fewer
function and gradient evaluations, and supercedes the existing BFGS
minimiser.

** The beta functions gsl_sf_beta_e(a,b) and gsl_sf_lnbeta_e(a,b) now
handle negative arguments a,b.  Added new function gsl_sf_lnbeta_sgn_e
for computing magnitude and sign of negative beta values, analagous to
gsl_sf_lngamma_sgn_e.

** gsl_cheb_eval_mode now uses the same error estimate as
gsl_cheb_eval_err.
