@@ -438,6 +438,13 @@ int gsl_linalg_cholesky_decomp_unit(gsl_matrix * A, gsl_vector * D);
 
 int gsl_linalg_complex_cholesky_decomp (gsl_matrix_complex * A);
 
+int gsl_linalg_complex_cholesky_solve (const gsl_matrix_complex * cholesky,
+                                       const gsl_vector_complex * b,
+                                       gsl_vector_complex * x);
+
+int gsl_linalg_complex_cholesky_svx (const gsl_matrix_complex * cholesky,
+                                     gsl_vector_complex * x);
+
 /* Symmetric to symmetric tridiagonal decomposition */
 
 int gsl_linalg_symmtd_decomp (gsl_matrix * A, 
